fix: link navigation mobileMenu

--- a/src/app/_components/Modal/styles.module.css
+++ b/src/app/_components/Modal/styles.module.css
@@ -38,7 +38,7 @@
     border: 1px solid cyan;
     width: 100%;
     height: 45vh;
-    max-height: 370px;
+    max-height: 400px;
     display: flex;
     flex-direction: column;
     row-gap: 1em;
