--- a/src/app/_ui/NavigationMenu/styles.module.css
+++ b/src/app/_ui/NavigationMenu/styles.module.css
@@ -57,11 +57,13 @@ header .Navigation .links {
     gap: 10px;
 }
 
-.Toggle_Title h1 {
+.Toggle_Title a {
     font-weight: 400;
     margin: 0;
     letter-spacing: 1px;
     font-size: 1.4vw;
+    text-decoration: none;
+    color: cyan;
 }
 
 .mobileMenuContainer {
@@ -135,7 +137,7 @@ header .Navigation .links {
         box-sizing: border-box;
     }
 
-    .Toggle_Title h1 {
+    .Toggle_Title a {
         font-size: 4vw;
     }
 }
